--- a/LeaveMessage/MessageManageH/HTML/css/Write.css
+++ b/LeaveMessage/MessageManageH/HTML/css/Write.css
@@ -14,16 +14,65 @@ body{height:500px;}
 .message
 {
     width: 85%;
-    height:60%;
+    height:40%;
     margin: auto;
-    /*内阴影*/
-    box-shadow:0px 0px 1px 2px #EEDFCC inset;
+    border: 1px solid blue;
 }
 .message textarea
 {
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 100px;
+    outline: none;
     overflow:hidden;
+    /*内部阴影*/
+    box-shadow:0px 0px 1px 2px #EEDFCC inset;
+}
+.note
+{
+    width:150px;
+    height: 25px;
+    border:1px solid purple ;
+   float: right;
+
+}
+.note input
+{
+    -webkit-appearance: none;
+    outline: none;
+    width: 124px;
+    height: 20px;
+    margin-left: 23px;
+    position: absolute;
+    border: 1px solid #e5e5e5;
+    opacity: 0.6;
+    text-align: center;
+    cursor: pointer;
+}
+/*签名文本输入框样式*/
+.note input:focus
+{
+    border-color: #bebebe;
+    outline: 0;
+    box-shadow: inset 0 1px 8px rgba(139 137 137,.6)
+}
+.note img
+{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    margin-top: 3px;
+
+}
+.decoration
+{
+    height: 16%;
+    margin: 30px auto;
+    border: 1px solid red;
+}
+.decoration input
+{
+    width: 30px;
+    height: 30px;
 }
 
 .copyright
