--- a/LeaveMessage/MessageManageH/HTML/css/Write.css
+++ b/LeaveMessage/MessageManageH/HTML/css/Write.css
@@ -1,22 +1,23 @@
-body{height:500px;}
+body
+{height:500px;}
 .head
 {height:16%;}
 .top
-{height: 8%;margin-bottom: 1%;}
+{width:100%;height: 8%;margin-bottom: 1%;padding-left: 0}
 .top [title="return"]
 {
    margin-left: 4%;
 }
 .top [title="leave"]
 {
-    margin-left: 80%;
+    float: right;
+    margin-right: 4%;
 }
 .message
 {
     width: 85%;
-    height:40%;
+    height:60%;
     margin: auto;
-    border: 1px solid blue;
 }
 .message textarea
 {
@@ -25,35 +26,41 @@ body{height:500px;}
     outline: none;
     overflow:hidden;
     /*内部阴影*/
-    box-shadow:0px 0px 1px 2px #EEDFCC inset;
+    box-shadow:0 0 0 1px #432744;
 }
 .note
 {
     width:150px;
     height: 25px;
-    border:1px solid purple ;
-   float: right;
+    border:1px solid #8B4513 ;
+    float: right;
+    margin-top: 5px;
 
 }
 .note input
 {
     -webkit-appearance: none;
     outline: none;
-    width: 124px;
-    height: 20px;
+    width: 125px;
+    height: 21px;
     margin-left: 23px;
     position: absolute;
     border: 1px solid #e5e5e5;
     opacity: 0.6;
     text-align: center;
     cursor: pointer;
+    /*-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;*/
+    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s*/
 }
 /*签名文本输入框样式*/
 .note input:focus
 {
     border-color: #bebebe;
     outline: 0;
-    box-shadow: inset 0 1px 8px rgba(139 137 137,.6)
+    /*阴影*/
+    box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 4px rgba(0,0,0,.6);
+    /*background-color: rgba(0,0,0,0.04);*/
 }
 .note img
 {
@@ -61,18 +68,48 @@ body{height:500px;}
     height: 20px;
     position: absolute;
     margin-top: 3px;
-
 }
 .decoration
 {
-    height: 16%;
-    margin: 30px auto;
-    border: 1px solid red;
+    height: 50%;
+    margin: 40px auto;
 }
-.decoration input
+.decoration .dec-menu input
 {
-    width: 30px;
-    height: 30px;
+    width: 23px;
+    height: 22px;
+    margin-top: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.dec-menu.dec-line
+{
+    height: 19%;
+}
+.dec-menu
+{
+    border: 1px solid #432744;
+}
+.decoration table
+{
+    width: 100%;
+    height: 80%;
+    border-collapse: collapse;
+    border: 1px solid #d5d5d5;
+}
+.decoration td
+{
+    width: 10%;
+    /*border:1px solid blue;*/
+
+}
+.decoration table input
+{
+    width: 25px;
+    height: 25px;
+    margin-top: 2px;
+    margin-left: 25px;
+    /*border:1px solid yellow;*/
 }
 
 .copyright
