--- a/LeaveMessage/MessageManageH/HTML/css/index.css
+++ b/LeaveMessage/MessageManageH/HTML/css/index.css
@@ -33,15 +33,13 @@ body
 {
     height: 4%;
     margin-bottom: 1%;
-}
-.top-in
-{
-    padding-left:88%;
+    padding-left: 85%;
 }
 .icon
 {
-    padding-top: 8px;
-    padding-left: 15px;
+    margin-top: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
     width: 30px;
     height: 30px;
 }
@@ -62,14 +60,31 @@ body
     border: 1px solid #666666;
     margin-bottom: 2%;
 }
-
 .board-top
 {
-    width: 20%;
     height: 29%;
+}
+.board-top-left
+{
+    width: 20%;
     padding: 1% 1%;
-    border: 1px solid red;
     font-size: 14px;
+}
+.board-top-right
+{
+    width: 7%;
+    height: 20px;
+    margin-top: -6.5%;
+    margin-left: 92%;
+    position: relative;
+}
+.board-top-right input
+{
+    width: 20px;
+    height: 20px;
+    margin-right: 2px;
+    margin-left: 2px;
+    float: right;
 }
 #username
 {
@@ -92,7 +107,7 @@ body
     width:40px;
 
 }
-.board-content
+#board-content
 {
     width: 96%;
     height: 66%;
