解决了html中樱花img显示问题，及樱花降落时出现水平和垂直滚动条问题

--- a/LeaveMessage/MessageManageH/HTML/css/index.css
+++ b/LeaveMessage/MessageManageH/HTML/css/index.css
@@ -7,6 +7,10 @@ body
     background-size:cover;
     background-attachment:fixed;
 }
+input:focus
+{
+   outline: none;
+}
 #content
 {
     width:70%;
@@ -120,8 +124,8 @@ body
 }
 .foot-jump
 {
-    width: 25%;
-    margin-left: 75%;
+    width: 30%;
+    margin-left: 70%;
 }
 .foot-jump img
 {
