--- a/LeaveMessage/MessageManageH/HTML/css/login.css
+++ b/LeaveMessage/MessageManageH/HTML/css/login.css
@@ -23,9 +23,15 @@ body
 {
     width: 100px;
     height: 100px;
-    border-radius: 60px;
     margin:20px auto;
+
+}
+.headshot img
+{
+    width: 100%;
+    height: 100%;
     border: 1px solid rgba(255,105,180, 0.4);
+    border-radius: 50%;
 }
 
 /*登录：窗体*/
