--- a/LeaveMessage/MessageManageH/HTML/css/login.css
+++ b/LeaveMessage/MessageManageH/HTML/css/login.css
@@ -1,3 +1,6 @@
+/*
+修饰login.html
+*/
 body
 {
     width: 800px;
@@ -13,11 +16,17 @@ body
     width:70%;
     height:98%;
     margin:10% auto;
-    background-color: #fff;
-    opacity: 0.8;
-    /*阴影*/
-    box-shadow:0px 0px 10px 3px rgba(255,105,180,0.3);
 }
+/*注册*/
+.register
+{
+    width: 20px;
+    height: 20px;
+    float: right;
+    margin-top: -10px;
+    margin-right: 10px;
+}
+
 /*头像*/
 .headshot
 {
@@ -50,7 +59,7 @@ form input
     height: 30px;
     border-radius: 3px;
     padding: 1%;
-    margin: 0 auto 2% auto;
+    margin:  2% auto;
     display: block;
     text-align: center;
     font-size: 18px;
@@ -60,7 +69,6 @@ form input
 form input:hover
 {
     background-color: #FFF0F5;
-
 }
 form input:focus
 {
@@ -69,7 +77,6 @@ form input:focus
     color:#EE1289;
     outline: none;
     box-shadow:0px 0px 10px 2px rgba(255,105,180,0.3) inset;
-
 }
 /*按钮：登录、注册*/
 .btn
@@ -106,4 +113,22 @@ form button:hover
     float: right;
 }
 
+#launch-form
+{
+    display: block;
+    height:100% ;
+    background-color: #fff;
+    opacity: 0.8;
+    /*阴影*/
+    box-shadow:0 0 10px 3px rgba(255,105,180,0.3);
+}
+#register-form
+{
+    display: none;
+    height:100% ;
+    background-color: #fff;
+    opacity: 0.8;
+    /*阴影*/
+    box-shadow:0 0 10px 3px rgba(255,105,180,0.3);
+}
 
