--- a/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
+++ b/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
@@ -1,3 +1,11 @@
+/*
+修饰myBoard.html, Manager.html
+*/
+
+/**
+ *
+ 顶部、头部、返回按钮 公共部分
+*/
 .Logo
 {
     width: 60px;
@@ -20,6 +28,10 @@
     margin-left: 4%;
     margin-top: 1%;
 }
+/**
+ *
+ 以下是 myBoard头部输入框
+*/
 .top [title="iw"]
 {
     width: 57.4%;
