--- a/LeaveMessage/MessageManageH/HTML/css/yinghua.css
+++ b/LeaveMessage/MessageManageH/HTML/css/yinghua.css
@@ -1,3 +1,6 @@
+/*
+修饰漂浮的樱花花瓣
+*/
 body{
     /*max-width:100%;*/
     box-sizing: border-box;
@@ -11,11 +14,10 @@ body{
     margin-top:-10%;
     opacity: 0.5;
     position: absolute;
-    z-index: 3;
+    z-index: 9;
     /*-webkit-transform:rotate3d(.6,1,.6,45deg);*/
     /*-moz-transform:rotate3d(.6,1,.6,45deg);*/
     /*-ms-transform:rotate3d(.6,1,.6,45deg);*/
     /*-o-transform:rotate3d(.6,1,.6,45deg);*/
     /*transform:rotate3d(.6,1,.6,45deg);*/
-
 }
