--- a/LeaveMessage/MessageManageH/HTML/css/login.css
+++ b/LeaveMessage/MessageManageH/HTML/css/login.css
@@ -104,6 +104,10 @@ form button:hover
     border: none;
     box-shadow:0px 0px 10px 3px rgba(255,105,180,0.3);
 }
+#login
+{
+    float: left;
+}
 .login
 {
     float: left;
