--- a/LeaveMessage/MessageManageH/HTML/css/index.css
+++ b/LeaveMessage/MessageManageH/HTML/css/index.css
@@ -77,16 +77,42 @@ button
     height:80%;
     margin: auto;
 }
-.board ul
+/*table id*/
+#BoardShow
 {
+    width: 100%;
     height: 100%;
+    border-collapse:separate;
+    border-spacing:0 10px;
+    table-layout:fixed;
+    word-break: break-all;
+    word-wrap: break-word;
+
 }
-.board ul li
+/*tr id*/
+#board-content
 {
-    list-style: none;
-    height: 18%;
-    border: 1px solid #666666;
+    height: 140px;
+    /*height: 18%;*/
+    /*border: 1px solid #666666;*/
+    box-shadow:0 0 1px 1px #666;
     margin-bottom: 2%;
+}
+#board-content td
+{
+
+    /*word-break: keep-all;*/
+    /*white-space:nowrap;*/
+}
+/*td 内部留言内容 id*/
+#board-incontent
+{
+    width: 96%;
+    height: 58%;
+    margin: auto;
+    padding-left: 2%;
+    padding-top:2%;
+    /*background-color: #bebebe;*/
 }
 .board-top
 {
@@ -135,12 +161,7 @@ button
     width:40px;
 
 }
-#board-content
-{
-    width: 96%;
-    height: 66%;
-    margin: auto;
-}
+
 
 /**
  *
