到这里基本完成登陆注册功能、修改个人信息功能、查看留言功能、留言功能、审核功能、删除过审留言功能。目前存在的问题有：1、留言内容过多无法自动分页；2、留言中只能有普通文字及标点，特殊符号会使整个数据库崩掉；3、管理员无法对留言内容做更改；4、留言内容只能在120内，超出120字会溢出设计好的留言框

--- a/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
+++ b/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
@@ -15,7 +15,7 @@
 {
     position: absolute;
     margin-top: -4%;
-    margin-left: 62%;
+    margin-left: 56%;
 }
 .icon
 {padding: 0;}
@@ -32,16 +32,17 @@
  *
  以下是 myBoard头部输入框
 */
-.top [title="iw"]
+.top [title="toWrite"]
 {
-    width: 57.4%;
+    width: 48.2%;
     height: 4%;
     position: absolute;
     margin-left: 7.2%;
-    margin-top: -3%;
+    margin-top: -2.6%;
     padding-top: 8px;
     border: 1px solid #666666;
 }
+
 .top [title="write"]
 {
     width: 24px;
