--- a/LeaveMessage/MessageManageH/HTML/css/index.css
+++ b/LeaveMessage/MessageManageH/HTML/css/index.css
@@ -81,7 +81,6 @@ button
 #BoardShow
 {
     width: 100%;
-    height: 100%;
     border-collapse:separate;
     border-spacing:0 10px;
     table-layout:fixed;
@@ -108,15 +107,16 @@ button
 #board-incontent
 {
     width: 96%;
-    height: 58%;
+    height: 60px;
     margin: auto;
     padding-left: 2%;
-    padding-top:2%;
+    padding-top:3.5%;
     /*background-color: #bebebe;*/
 }
 .board-top
 {
     height: 29%;
+
 }
 .board-top-left
 {
@@ -126,10 +126,10 @@ button
 }
 .board-top-right
 {
-    width: 7%;
+    width: 9%;
     height: 20px;
     margin-top: -6.5%;
-    margin-left: 92%;
+    margin-left: 90%;
     position: relative;
 }
 .board-top-right input
