--- a/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
+++ b/LeaveMessage/MessageManageH/HTML/css/myBoard-Manager.css
@@ -51,3 +51,13 @@
     padding-right: 1%;
     margin-top: -5px;
 }
+
+#board-incontent
+{
+    width: 96%;
+    height: 60px;
+    margin: auto;
+    padding-left: 2%;
+    padding-top:3.5%;
+    /*background-color: #bebebe;*/
+}
